Fix sub-pixel aliasing gaps on retina screens
For some reason, there is often a 0.5px gap between the triangle and the tooltip box on retina screens. Adding/subtracting 0.5px fixes the problem.

--- a/src/components/icon-toolbar/icon-toolbar.scss
+++ b/src/components/icon-toolbar/icon-toolbar.scss
@@ -81,7 +81,7 @@
 
     position: absolute;
     top: calc(50% - #{$triangle-size});
-    left: -$triangle-size;
+    left: -$triangle-size + 0.5;
     width: 0;
     height: 0;
     border-color: transparent;
