--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -32,7 +32,7 @@ $triangle-size: 10px;
 
   &::before {
     position: absolute;
-    bottom: -$y-offset;
+    bottom: -$y-offset + 0.5;
     left: $x-offset / 2;
     width: 0;
     height: 0;
@@ -56,7 +56,7 @@ $triangle-size: 10px;
   }
 
   &--top::before {
-    top: -$y-offset;
+    top: -$y-offset + 0.5;
     bottom: auto;
     border-width: 0 $triangle-size $triangle-size $triangle-size;
     border-top-color: transparent;
